--- a/package.json
+++ b/package.json
@@ -10,9 +10,16 @@
   },
   "dependencies": {
     "@google/genai": "^1.30.0",
+    "docx": "^9.5.1",
+    "html-docx-js-typescript": "^0.1.5",
+    "jspdf": "^3.0.4",
+    "mammoth": "^1.11.0",
+    "marked": "^17.0.1",
+    "pdfjs-dist": "^5.4.449",
+    "qrcode.react": "^4.2.0",
     "react": "^19.2.0",
-    "react-router-dom": "^7.9.6",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
